--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 </head>
 <body>
     <!-- Header -->
-    <header id="header" class="header-site">
+    <header id="header" class="site-header">
 
         <nav id="menu" class="main-nav">
             <a href="site.com" class="logo-site">
                 <i class="fab fa-viacoin"></i>
                 <span>Vortex<span>
             </a>
-            <ul class="nav">
+            <ul>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
